syntax = "proto3";

package admin;

option go_package = "persacc/api/v1/admin;adminpb";

message Customer {
    int64 id = 1;
    string name = 2;
    string first_name = 3;
    string last_name = 4;
    string prefix = 5;
    string middle_name = 6;
    string suffix = 7;
    string birthday = 8;
    string phone = 9;
    string email = 10;
    string additional_info = 11;
    int64 user_id = 12;
    string created_at = 13;
    string updated_at = 14;
    string deleted_at = 15;
}

message CreateCustomerRequest {
    string name = 1;
    string first_name = 2;
    string last_name = 3;
    string prefix = 4;
    string middle_name = 5;
    string suffix = 6;
    string birthday = 7;
    string phone = 8;
    string email = 9;
    string additional_info = 10;
    int64 user_id = 11;
}

message CreateCustomerResponse {
    Customer customer = 1;
}

message GetCustomerRequest {
    int64 id = 1;
}

message GetCustomerResponse {
    Customer customer = 1;
}

message UpdateCustomerRequest {
    int64 id = 1;
    string name = 2;
    string first_name = 3;
    string last_name = 4;
    string prefix = 5;
    string middle_name = 6;
    string suffix = 7;
    string birthday = 8;
    string phone = 9;
    string email = 10;
    string additional_info = 11;
}

message UpdateCustomerResponse {
    Customer customer = 1;
}

message DeleteCustomerRequest {
    int64 id = 1;
}

message DeleteCustomerResponse {
    bool success = 1;
}

message ListCustomersRequest {
    int32 page = 1;
    int32 limit = 2;
}

message ListCustomersResponse {
    repeated Customer customers = 1;
    int32 total = 2;
    int32 page = 3;
    int32 limit = 4;
}
